@@ -1,3 +1,8 @@
+2004-03-12  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
+	Fixes #136811 (h2def ignores some functions)
+	* codegen/h2def.py: skips the extern "C"
+
 === PyGTK 2.2.0 ===
 
 2004-03-11  Johan Dahlin  <johan@gnome.org>
